@@ -84,7 +84,8 @@ static const _ipp_option_t ipp_options[] =
   { "notify-charset",		IPP_TAG_CHARSET,	IPP_TAG_SUBSCRIPTION },
   { "notify-events",		IPP_TAG_KEYWORD,	IPP_TAG_SUBSCRIPTION },
   { "notify-events-default",	IPP_TAG_KEYWORD,	IPP_TAG_PRINTER },
-  { "notify-lease-time",	IPP_TAG_INTEGER,	IPP_TAG_SUBSCRIPTION },
+  { "notify-lease-duration",	IPP_TAG_INTEGER,	IPP_TAG_SUBSCRIPTION },
+  { "notify-lease-duration-default", IPP_TAG_INTEGER,	IPP_TAG_PRINTER },
   { "notify-natural-language",	IPP_TAG_LANGUAGE,	IPP_TAG_SUBSCRIPTION },
   { "notify-pull-method",	IPP_TAG_KEYWORD,	IPP_TAG_SUBSCRIPTION },
   { "notify-recipient",		IPP_TAG_URI,		IPP_TAG_SUBSCRIPTION },
